<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Nexus</string>
    <string name="app_subtitle">Remote desktop viewer</string>
    <string name="add_host">Add host</string>
    <string name="host_address_hint">Host address (hostname or 192.168.x.x)</string>
    <string name="pair_code_hint">6-digit code</string>
    <string name="discover">Discover</string>
    <string name="pair">Pair</string>
    <string name="no_hosts_title">No hosts yet</string>
    <string name="no_hosts_body">Tap “Add host” to discover and pair with a Nexus host on your network.</string>
    <string name="host_avatar">Host</string>
    <string name="unpair_confirmation">Unpair this host? You will need the pairing code to add it again.</string>
    <string name="pairing_title">Add a host</string>
    <string name="pairing_subtitle">Tap your computer in the list below. It will ask you to confirm on its own screen, so there is no code to type.</string>
<string name="discovered_hosts">Nearby hosts</string>
    <string name="nearby_hint">Looking for computers running Nexus…</string>
    <string name="manual_title">Not listed? Type its address</string>
    <string name="mode_touch">Touch</string>
    <string name="mode_pointer">Pointer</string>
    <string name="keyboard_short">Keys</string>
    <string name="fit_toggle">Fit / fill screen</string>
</resources>
